[project]
name = "elo"
version = "0.1.0"
description = "A command line ELO rating calculator"
readme = "README.md"
authors = [
    { name = "henrywatkins", email = "h.watkins@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
	'click',
	"prettytable>=3.16.0",
	'tinydb',
]

[project.scripts]
elo = "elo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.1",
]
